tree_sitter_v/test/corpus/hash_statement.txt
================================================================================
Hash statement
================================================================================
$if tinyc {
    #flag -I @VEXEROOT/thirdparty/libgc/include
    #flag -L @VEXEROOT/thirdparty/tcc/lib
    #flag -lgc
}
--------------------------------------------------------------------------------

(source_file
  (simple_statement
    (compile_time_if_expression
      (reference_expression
        (identifier))
      (block
        (hash_statement)
        (hash_statement)
        (hash_statement)))))
